college details alignments issue fixed

--- a/styles/components/_college-header.scss
+++ b/styles/components/_college-header.scss
@@ -11,7 +11,7 @@
     width: 90%;
     max-width: 1440px;
     margin: 0px auto;
-    padding-left: 5px;
+
     // @media (min-width: 768px) {
     //   width: 720px;
     //   margin: 0px auto;
@@ -88,7 +88,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 6px;
     width: 38rem;
     @media (max-width: 450px) {
       flex-direction: column;
