--- a/styles/components/_why-us.scss
+++ b/styles/components/_why-us.scss
@@ -43,7 +43,7 @@
         width: 100%;
         margin-left: auto;
         margin-right: 0;
-        padding-left: 60px;
+        padding-left: 70px;
       }
       @media (max-width: 820px) {
         padding-left: 24px;
